--- a/map_service/folium_map0/templates/folium_map0/folium_map0.html
+++ b/map_service/folium_map0/templates/folium_map0/folium_map0.html
@@ -2,10 +2,68 @@
 {% block folium_map0 %}active{% endblock %}
 {% block content %}
 
-<div class='first_line'>
+<title>Map folium</title>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-	{{ my_map|safe }}
+  <style>
+	* {
+	  box-sizing: border-box;
+	}
+	.WebContainer{
+    width: 100%;
+    height: auto;
+}
+	.articles{
+	    width:90%; /*Takes 90% width from WebContainer*/
+	    height: auto;
+	    margin: auto;
+	}
 
+	#rcorners1 {
+	  border-radius: 25px;
+	  background: #73AD21;
+	  /*padding: 20px;
+	  width: 200px;
+	  height: 150px;*/
+	}
+  </style>
+
+<div class='WebContainer articles' style="margin-top:79px;">
+
+	<div class="row">
+		<div class="column" style="background-color:#bbb;">  <!-- style="background-color:#aaa;" -->
+			{{ my_map|safe }}
+		</div>
+		<div class="column" style="background-color:;">  <!-- style="background-color:#bbb;" -->
+			<div class="container">
+				<h1>Height Utilities</h1>
+				<p>Set the height of an element with the w-* classes:</p>
+				<div style="height:200px;background-color:">
+				    <div class="mh-100 d-inline-block p-2" style="height:500px;width:49%;border-radius: 25px;background: #73AD21;">
+				    	<div style="padding: 20px;">
+				    	{% for light in lights %}
+				    		{% if light.month_str == "Jan" and light.day_int == 20 %}
+					    		<h5>Wed, January 20</h5>
+					    		<p>Sunrise: 9:17</p>
+					    		<p>True Moon: 12:31</p>
+					    		<p>Sunset: 15:46</p>
+					    		<p>Daylight_hours: 6:29:02 </p>
+						    {% endif %}
+					    {% endfor %}
+						</div>
+				    </div>
+				    <div class="mh-100 d-inline-block p-2 bg-warning" style="height:500px;width:50%;border-radius: 25px;">Max Height 100%
+				    </div>
+				 </div>
+			</div>
+		</div>
+	</div>
 </div>
 
 {% endblock content %}
