add icones and show them using gabarits

--- a/map_service/folium_map0/templates/folium_map0/base.html
+++ b/map_service/folium_map0/templates/folium_map0/base.html
@@ -49,7 +49,7 @@
        </div>
     </footer> -->
     <div class="footy">
-      <p>© 2020 Copyright Footer</p>
+      <p>© 2020 Copyright</p>
     </div>
 
     <!-- Optional JavaScript -->
