Remove the code which was commented out

--- a/map_service/folium_map0/templates/folium_map0/folium_map0.html
+++ b/map_service/folium_map0/templates/folium_map0/folium_map0.html
@@ -28,9 +28,6 @@
 	#rcorners1 {
 	  border-radius: 25px;
 	  background: #73AD21;
-	  /*padding: 20px;
-	  width: 200px;
-	  height: 150px;*/
 	}
 
 	.picture_size {
@@ -42,10 +39,10 @@
 <div class='WebContainer articles' style="margin-top:79px;">
 
 	<div class="row">
-		<div class="column" style="background-color:#bbb;">  <!-- style="background-color:#aaa;" -->
+		<div class="column" style="background-color:#bbb;">
 			{{ my_map|safe }}
 		</div>
-		<div class="column" style="background-color:;">  <!-- style="background-color:#bbb;" -->
+		<div class="column" style="background-color:;">
 			<div class="container">
 				<h1>Height Utilities</h1>
 				<p>Set the height of an element with the w-* classes:</p>
